<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_finca"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/spinner_finca_text" />

                    <Spinner
                        android:id="@+id/spinner_finca"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <TextView
                            android:id="@+id/textView_bloque"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/spinner_bloque_text"
                            android:textAlignment="center" />

                        <Spinner
                            android:id="@+id/spinner_bloque"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:spinnerMode="dropdown" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/imageButton_bloque_plus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/plus" />

                            <ImageButton
                                android:id="@+id/imageButton_bloque_minus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/minus" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <TextView
                            android:id="@+id/textView_cama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/spinner_cama_text"
                            android:textAlignment="center" />

                        <Spinner
                            android:id="@+id/spinner_cama"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:entries="@array/camas"
                            android:spinnerMode="dropdown" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/imageButton_cama_plus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/plus" />

                            <ImageButton
                                android:id="@+id/imageButton_cama_minus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/minus" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <TextView
                            android:id="@+id/textView_cuadro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/spinner_cuadro_text"
                            android:textAlignment="center" />

                        <Spinner
                            android:id="@+id/spinner_cuadro"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:entries="@array/cuadros"
                            android:spinnerMode="dropdown" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/imageButton_cuadro_plus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/plus" />

                            <ImageButton
                                android:id="@+id/imageButton_cuadro_minus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/minus" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView_variedad"
                    android:layout_width="match_parent"
                    android:layout_height="112dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView_variedad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/image_variedad_text"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabHost
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TabWidget
                            android:id="@android:id/tabs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:showDividers="middle" />

                        <FrameLayout
                            android:id="@android:id/tabcontent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:id="@+id/tab_top"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <ListView
                                    android:id="@android:id/list"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/tab_plagas"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"/>

                            <LinearLayout
                                android:id="@+id/tab_enfermedades"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"/>
                        </FrameLayout>
                    </LinearLayout>
                </TabHost>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_add_finca"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClick_button_add_finca"
                            android:text="Add Finca" />

                        <Button
                            android:id="@+id/button_delete_finca"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Delete Finca"
                            android:onClick="onClick"/>

                        <Button
                            android:id="@+id/button_add_bloque"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Add Bloque"
                            android:onClick="onClick"/>

                        <Button
                            android:id="@+id/button_delete_bloque"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Delete Bloque"
                            android:onClick="onClick"/>

                        <Button
                            android:id="@+id/button_insert_mssqlRemoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Insert MSSQL Remoto"
                            android:onClick="onClick"/>

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:text="@string/textView_registrosFaltantes_text"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>